--- a/src/data/posts/serverless-social-network.mdx
+++ b/src/data/posts/serverless-social-network.mdx
@@ -16,7 +16,7 @@ Serverless computing on AWS offers unparalleled scalability, flexibility, and co
 One of the most compelling use cases for serverless is in building social networks. Traditional architectures often struggle with traffic spikes, high operational costs, and monolithic codebases that slow down innovation. Serverless addresses these challenges by providing automatic scaling, pay-per-use pricing, and event-driven workflows that allow for independent feature deployment.
 
 ### Inspiration for This Article and System Design
-The inspiration for this design comes from real-world experiences and insights shared by experts such as Yan Cui in his work *How to Build a Social Network Entirely on Serverless*【12†source】. The case study details how serverless can transform a monolithic social platform into a highly scalable, event-driven system that efficiently handles unpredictable traffic surges, reduces operational costs, and accelerates feature releases.
+The inspiration for this design comes from real-world experiences and insights shared by experts such as Yan Cui in his work *[How to Build a Social Network Entirely on Serverless](https://www.youtube.com/watch?v=o0SHFJDMpgc)*. The case study details how serverless can transform a monolithic social platform into a highly scalable, event-driven system that efficiently handles unpredictable traffic surges, reduces operational costs, and accelerates feature releases.
 
 By adopting a serverless-first approach, we aim to achieve:
 - **Improved developer velocity** through independent and rapid deployments.
