Fix ReferenceError by removing profile references

--- a/src/data/posts/owasp-top-ten-business.mdx
+++ b/src/data/posts/owasp-top-ten-business.mdx
@@ -15,7 +15,7 @@ The sheer scale of security breaches is astounding. In 2008 Albert Gonzalez was 
 
 It is helpful to place the importance of the OWASP Top Ten in the context of risk management for quantifying company cybersecurity more generally. Risk quantification can be summarized as the product of threat times vulnerability times impact:
 
-R = T x V x I
+Risk is equal to Threat multiplied by Vulnerability multiplied by Impact.
 
 Here R stands for Risk or the level of risk exposure for the company. T stands for threat, V for vulnerability and I for impact. In this section we will use a series of acronyms to help businesses understand risk. These risk measurements will be useful to ensure the relevance of each of OWASP’s top ten security threats in the context of your organization.
 
@@ -30,8 +30,6 @@ We have now considered threat and impact. The next challenge for a company is to
 ## Latest trends
 
 OWASP is a summary of the top ten threats and is collated from real data. The technical nature of the list can hide the real stories behind the data. It is important to emphasize that data breaches continue to be an important vector of risk for companies. In March 2020 Marriott revealed the exposure of the data of 5.2 million guests. In April 2020 Nintendo announced 160,000 accounts had been breached. Some of the compromised accounts had been used by attackers in order to buy items. For these companies, broken authentication (number 2 on the OWASP top ten) could have been mitigated through multi-factor authentication. In May 2020, EasyJet revealed that 9 million customers’ personal data was stolen by an attacker leading to an £18 billion class action lawsuit for GDPR although the final fine may be considerably lighter partly due to business issues relating to the Coronavirus pandemic.
-
-{% include owasp-top-ten-cheat-sheet-banner-business.html %}
 
 
 
